fixed styles: Options for players and the borders for each option to be responsive fluid without need of media queries, fixed spacing between the options the user and computer picked and the play again button. Overall responsiveness has improved due to use of vw sizing vs using % & rem

--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ main {
   border: 0.2rem solid;
   border-color: rgba(213, 213, 214, 0.25);
   border-radius: 15px;
-  padding: 1% 1.5%;
+  padding: 1vw 1.5vw;
   margin-top: 3%;
 }
 #logo {
@@ -61,7 +61,7 @@ main {
   max-width: 20%;
   width: 175px;
   height: auto;
-  padding: 1%;
+  padding: 1vw;
   text-align: center;
   border-radius: 10px;
   background-color: whitesmoke;
@@ -80,8 +80,7 @@ main {
   width: 100%;
   height: auto;
   margin: 0 auto;
-  background-color: rgba(78, 78, 78, 0.7);
-  margin-top: 11vmin;
+  margin-top: 15vmin;
 }
 #options-div {
   display: flex;
@@ -89,20 +88,15 @@ main {
   max-width: 100%;
   width: 100%;
   height: auto;
-  background-color: rgba(71, 45, 45, 0.7);
-  /* background-color:rgb(180, 180, 180); */
-  /* margin-top: 15vh; */
 }
 #pentagon-container {
   max-width: 100%;
   width: 100%;
   height: auto;
   margin: 0 auto;
-  /* background-color: rgba(44, 107, 110, 0.7); */
 }
 #bgPentagon {
   max-width: 100%;
-  /* max-height: 50vh; */
   width: 100%;
   height: auto;
 }
@@ -175,12 +169,12 @@ main {
   height: 100%;
   margin: 0 auto;
   text-align: center;
-  /* margin-top: 2.5%; */
 }
 .picked-container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  max-width: 40%;
+  width: 100%;
   height: auto;
   align-items: center;
 }
@@ -191,17 +185,16 @@ main {
 .picked {
   display: flex;
   align-items: center;
-  min-width: 15vw;
-  min-height: 15vw;
-  width: 50%;
+  min-width: 10vw;
+  min-height: 10vw;
+  width: 40%;
   height: auto;
   text-align: center;
   margin: 0 auto;
   border-radius: 50%;
-  /* margin-top: 10%; */
   background-color: white;
-  border: 2.5rem solid rgb(0, 192, 218);
-  box-shadow: 0rem 0.7rem rgb(0, 150, 170);
+  border: 1.5vw solid rgb(0, 192, 218);
+  box-shadow: 0vw 0.7vw rgb(0, 150, 170);
   background-image: radial-gradient(
     circle at 50% 65%,
     white 68%,
@@ -227,23 +220,21 @@ main {
   margin: 0 auto;
 }
 #outcome-container {
-  max-width: 25%;
+  max-width: 20%;
   height: auto;
-  margin: 0% 2.5%;
-  margin-top: 15%;
+  justify-content: center;
 }
 #playAgain {
   font-size: 1vmax;
   font-weight: 500;
   color: rgb(28, 46, 77);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 1vmax 2.5vmax;
+  padding: 1vw 2.5vw;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 25px;
   cursor: pointer;
-  text-decoration-color: none;
-  margin: 0 auto;
   align-self: center;
+  white-space: nowrap;
 }
 #outcome-text {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -251,6 +242,7 @@ main {
   font-weight: 500;
   font-weight: bold;
   font-size: 2vw;
+  white-space: nowrap;
 }
 #modal {
   display: none;
@@ -328,15 +320,12 @@ main {
   bottom: 5vw;
   right: 20%;
   z-index: 100;
-  float: right;
   background-color: transparent;
   border: 1px solid white;
   border-radius: 15px;
   padding: 0.5% 2.5%;
   color: white;
   cursor: pointer;
-  text-decoration-color: none;
-  outline: none;
   font-weight: 500;
 }
 #rules:hover {
@@ -381,24 +370,4 @@ main {
   height: auto;
   margin: 0 auto;
   bottom: 0;
-}
-
-@media only screen and (max-width: 950px) {
-  /* #score-section {
-    margin-top: 5vw;
-  } */
-  /* #options-section {
-        margin-top:15vw;
-    } */
-}
-@media only screen and (max-width: 450px) {
-  /* #score-section {
-    margin-top: 7.5vw;
-  } */
-  /* #options-section {
-        margin-top:15vw;
-    } */
-  /* #rules {
-    bottom: 15vw;
-  } */
 }
